// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config should return default nuxt configurations 1`] = `
{
  "ErrorPage": null,
  "_modules": [],
  "_nuxtConfigFile": undefined,
  "alias": {},
  "build": {
    "additionalExtensions": [],
    "aggressiveCodeRemoval": false,
    "analyze": false,
    "babel": {
      "babelrc": false,
      "cacheDirectory": undefined,
      "configFile": false,
    },
    "cache": false,
    "corejs": "auto",
    "cssSourceMap": undefined,
    "devMiddleware": {
      "stats": "none",
    },
    "extractCSS": false,
    "filenames": {
      "app": [Function],
      "chunk": [Function],
      "css": [Function],
      "font": [Function],
      "img": [Function],
      "video": [Function],
    },
    "followSymlinks": false,
    "friendlyErrors": true,
    "hardSource": false,
    "hotMiddleware": {},
    "html": {
      "minify": {
        "collapseBooleanAttributes": true,
        "decodeEntities": true,
        "minifyCSS": true,
        "minifyJS": true,
        "processConditionalComments": true,
        "removeEmptyAttributes": true,
        "removeRedundantAttributes": true,
        "trimCustomFragments": true,
        "useShortDoctype": true,
      },
    },
    "indicator": {
      "backgroundColor": "#2E495E",
      "color": "#00C48D",
      "position": "bottom-right",
    },
    "loaders": {
      "css": {
        "esModule": false,
        "modules": {
          "compileType": "icss",
        },
      },
      "cssModules": {
        "esModule": false,
        "modules": {
          "localIdentName": "[local]_[hash:base64:5]",
        },
      },
      "file": {
        "esModule": false,
      },
      "fontUrl": {
        "esModule": false,
        "limit": 1000,
      },
      "imgUrl": {
        "esModule": false,
        "limit": 1000,
      },
      "less": {},
      "pugPlain": {},
      "sass": {
        "sassOptions": {
          "indentedSyntax": true,
        },
      },
      "scss": {},
      "stylus": {},
      "vue": {
        "transformAssetUrls": {
          "embed": "src",
          "object": "src",
          "source": "src",
          "video": "src",
        },
      },
      "vueStyle": {},
    },
    "loadingScreen": {},
    "optimization": {
      "minimize": undefined,
      "minimizer": undefined,
      "runtimeChunk": "single",
      "splitChunks": {
        "automaticNameDelimiter": "/",
        "cacheGroups": {},
        "chunks": "all",
      },
    },
    "optimizeCSS": undefined,
    "parallel": false,
    "plugins": [],
    "postcss": {
      "postcssOptions": {},
    },
    "prodParallelRunner": false,
    "profile": false,
    "publicPath": "/_nuxt/",
    "quiet": true,
    "serverURLPolyfill": "url",
    "splitChunks": {
      "commons": true,
      "layouts": false,
      "pages": true,
    },
    "ssr": undefined,
    "standalone": false,
    "stats": {
      "excludeAssets": [
        /\\.map\\$/,
        /index\\\\\\.\\.\\+\\\\\\.html\\$/,
        /vue-ssr-\\(client\\|modern\\)-manifest\\.json/,
      ],
    },
    "styleResources": {},
    "template": undefined,
    "templates": [],
    "terser": {},
    "transpile": [],
    "warningIgnoreFilters": [],
    "watch": [],
  },
  "buildDir": ".nuxt",
  "buildModules": [],
  "cli": {
    "badgeMessages": [],
    "bannerColor": "green",
  },
  "createRequire": undefined,
  "css": [],
  "debug": undefined,
  "dev": false,
  "dir": {
    "app": "app",
    "assets": "assets",
    "layouts": "layouts",
    "middleware": "middleware",
    "pages": "pages",
    "static": "static",
    "store": "store",
  },
  "editor": undefined,
  "env": {},
  "extendPlugins": null,
  "extensions": [],
  "features": {
    "asyncData": true,
    "clientOnline": true,
    "clientPrefetch": true,
    "componentAliases": true,
    "componentClientOnly": true,
    "deprecations": true,
    "fetch": true,
    "layouts": true,
    "meta": true,
    "middleware": true,
    "store": true,
    "transitions": true,
    "validate": true,
  },
  "fetch": {
    "client": true,
    "server": true,
  },
  "generate": {
    "cache": {
      "globbyOptions": {
        "gitignore": true,
      },
      "ignore": [],
    },
    "concurrency": 500,
    "crawler": true,
    "dir": "dist",
    "exclude": [],
    "fallback": "200.html",
    "ignoreEnv": false,
    "interval": 0,
    "manifest": true,
    "nojekyll": true,
    "routes": [],
    "staticAssets": {
      "base": undefined,
      "dir": "static",
      "version": undefined,
      "versionBase": undefined,
    },
    "subFolders": true,
  },
  "globalName": undefined,
  "globals": {
    "context": [Function],
    "id": [Function],
    "loadedCallback": [Function],
    "nuxt": [Function],
    "pluginPrefix": [Function],
    "readyCallback": [Function],
  },
  "head": {
    "link": [],
    "meta": [],
    "script": [],
    "style": [],
  },
  "hooks": null,
  "ignore": [
    "**/*.test.*",
    "**/*.spec.*",
  ],
  "ignoreOptions": undefined,
  "ignorePrefix": "-",
  "layoutTransition": {
    "mode": "out-in",
    "name": "layout",
  },
  "layouts": {},
  "loading": {
    "color": "black",
    "continuous": false,
    "css": true,
    "duration": 5000,
    "failedColor": "red",
    "height": "2px",
    "rtl": false,
    "throttle": 200,
  },
  "loadingIndicator": "default",
  "messages": {
    "back_to_home": "Back to the home page",
    "client_error": "Error",
    "client_error_details": "An error occurred while rendering the page. Check developer tools console for details.",
    "error_404": "This page could not be found",
    "loading": "Loading...",
    "nuxtjs": "Nuxt",
    "server_error": "Server error",
    "server_error_details": "An error occurred in the application and your page could not be served. If you are the application owner, check your logs for details.",
  },
  "mode": undefined,
  "modern": undefined,
  "modes": {
    "spa": {
      "build": {
        "ssr": false,
      },
      "render": {
        "ssr": false,
      },
    },
    "universal": {
      "build": {
        "ssr": true,
      },
      "render": {
        "ssr": true,
      },
    },
  },
  "modules": [],
  "modulesDir": [
    "node_modules",
  ],
  "pageTransition": {
    "appear": false,
    "appearActiveClass": "appear-active",
    "appearClass": "appear",
    "appearToClass": "appear-to",
    "mode": "out-in",
    "name": "page",
  },
  "plugins": [],
  "privateRuntimeConfig": {},
  "publicRuntimeConfig": {},
  "render": {
    "bundleRenderer": {
      "runInNewContext": undefined,
      "shouldPrefetch": [Function],
      "shouldPreload": [Function],
    },
    "compressor": {
      "threshold": 0,
    },
    "crossorigin": undefined,
    "csp": false,
    "dist": {
      "index": false,
      "maxAge": "1y",
    },
    "etag": {
      "weak": false,
    },
    "fallback": {
      "dist": {},
      "static": {
        "handlers": {
          ".htm": false,
          ".html": false,
        },
        "skipUnknown": true,
      },
    },
    "http2": {
      "push": false,
      "pushAssets": null,
      "shouldPush": null,
    },
    "resourceHints": true,
    "ssr": undefined,
    "ssrLog": undefined,
    "static": {
      "prefix": true,
    },
  },
  "router": {
    "base": "/",
    "extendRoutes": null,
    "fallback": false,
    "linkActiveClass": "nuxt-link-active",
    "linkExactActiveClass": "nuxt-link-exact-active",
    "linkPrefetchedClass": false,
    "middleware": [],
    "mode": "history",
    "parseQuery": false,
    "prefetchLinks": true,
    "prefetchPayloads": true,
    "routeNameSplitter": "-",
    "routes": [],
    "scrollBehavior": null,
    "stringifyQuery": false,
    "trailingSlash": undefined,
  },
  "server": {
    "host": "localhost",
    "https": false,
    "port": 3000,
    "socket": undefined,
    "timing": false,
  },
  "serverMiddleware": [],
  "srcDir": undefined,
  "ssr": true,
  "styleExtensions": [
    "css",
    "pcss",
    "postcss",
    "styl",
    "stylus",
    "scss",
    "sass",
    "less",
  ],
  "target": "server",
  "test": true,
  "vue": {
    "config": {
      "performance": undefined,
      "silent": undefined,
    },
  },
  "vueMeta": null,
  "watch": [],
  "watchers": {
    "chokidar": {
      "ignoreInitial": true,
    },
    "rewatchOnRawEvents": undefined,
    "webpack": {
      "aggregateTimeout": 1000,
    },
  },
}
`;

exports[`config should return nuxt configurations with custom env 1`] = `
{
  "ErrorPage": null,
  "_modules": [],
  "_nuxtConfigFile": undefined,
  "alias": {},
  "build": {
    "additionalExtensions": [],
    "aggressiveCodeRemoval": false,
    "analyze": false,
    "babel": {
      "babelrc": false,
      "cacheDirectory": undefined,
      "configFile": false,
    },
    "cache": false,
    "corejs": "auto",
    "cssSourceMap": undefined,
    "devMiddleware": {
      "stats": "none",
    },
    "extractCSS": false,
    "filenames": {
      "app": [Function],
      "chunk": [Function],
      "css": [Function],
      "font": [Function],
      "img": [Function],
      "video": [Function],
    },
    "followSymlinks": false,
    "friendlyErrors": true,
    "hardSource": false,
    "hotMiddleware": {},
    "html": {
      "minify": {
        "collapseBooleanAttributes": true,
        "decodeEntities": true,
        "minifyCSS": true,
        "minifyJS": true,
        "processConditionalComments": true,
        "removeEmptyAttributes": true,
        "removeRedundantAttributes": true,
        "trimCustomFragments": true,
        "useShortDoctype": true,
      },
    },
    "indicator": {
      "backgroundColor": "#2E495E",
      "color": "#00C48D",
      "position": "bottom-right",
    },
    "loaders": {
      "css": {
        "esModule": false,
        "modules": {
          "compileType": "icss",
        },
      },
      "cssModules": {
        "esModule": false,
        "modules": {
          "localIdentName": "[local]_[hash:base64:5]",
        },
      },
      "file": {
        "esModule": false,
      },
      "fontUrl": {
        "esModule": false,
        "limit": 1000,
      },
      "imgUrl": {
        "esModule": false,
        "limit": 1000,
      },
      "less": {},
      "pugPlain": {},
      "sass": {
        "sassOptions": {
          "indentedSyntax": true,
        },
      },
      "scss": {},
      "stylus": {},
      "vue": {
        "transformAssetUrls": {
          "embed": "src",
          "object": "src",
          "source": "src",
          "video": "src",
        },
      },
      "vueStyle": {},
    },
    "loadingScreen": {},
    "optimization": {
      "minimize": undefined,
      "minimizer": undefined,
      "runtimeChunk": "single",
      "splitChunks": {
        "automaticNameDelimiter": "/",
        "cacheGroups": {},
        "chunks": "all",
      },
    },
    "optimizeCSS": undefined,
    "parallel": false,
    "plugins": [],
    "postcss": {
      "postcssOptions": {},
    },
    "prodParallelRunner": false,
    "profile": false,
    "publicPath": "/_nuxt/",
    "quiet": true,
    "serverURLPolyfill": "url",
    "splitChunks": {
      "commons": true,
      "layouts": false,
      "pages": true,
    },
    "ssr": undefined,
    "standalone": false,
    "stats": {
      "excludeAssets": [
        /\\.map\\$/,
        /index\\\\\\.\\.\\+\\\\\\.html\\$/,
        /vue-ssr-\\(client\\|modern\\)-manifest\\.json/,
      ],
    },
    "styleResources": {},
    "template": undefined,
    "templates": [],
    "terser": {},
    "transpile": [],
    "warningIgnoreFilters": [],
    "watch": [],
  },
  "buildDir": ".nuxt",
  "buildModules": [],
  "cli": {
    "badgeMessages": [],
    "bannerColor": "green",
  },
  "createRequire": undefined,
  "css": [],
  "debug": undefined,
  "dev": false,
  "dir": {
    "app": "app",
    "assets": "assets",
    "layouts": "layouts",
    "middleware": "middleware",
    "pages": "pages",
    "static": "static",
    "store": "store",
  },
  "editor": undefined,
  "env": {},
  "extendPlugins": null,
  "extensions": [],
  "features": {
    "asyncData": true,
    "clientOnline": true,
    "clientPrefetch": true,
    "componentAliases": true,
    "componentClientOnly": true,
    "deprecations": true,
    "fetch": true,
    "layouts": true,
    "meta": true,
    "middleware": true,
    "store": true,
    "transitions": true,
    "validate": true,
  },
  "fetch": {
    "client": true,
    "server": true,
  },
  "generate": {
    "cache": {
      "globbyOptions": {
        "gitignore": true,
      },
      "ignore": [],
    },
    "concurrency": 500,
    "crawler": true,
    "dir": "dist",
    "exclude": [],
    "fallback": "200.html",
    "ignoreEnv": false,
    "interval": 0,
    "manifest": true,
    "nojekyll": true,
    "routes": [],
    "staticAssets": {
      "base": undefined,
      "dir": "static",
      "version": undefined,
      "versionBase": undefined,
    },
    "subFolders": true,
  },
  "globalName": undefined,
  "globals": {
    "context": [Function],
    "id": [Function],
    "loadedCallback": [Function],
    "nuxt": [Function],
    "pluginPrefix": [Function],
    "readyCallback": [Function],
  },
  "head": {
    "link": [],
    "meta": [],
    "script": [],
    "style": [],
  },
  "hooks": null,
  "ignore": [
    "**/*.test.*",
    "**/*.spec.*",
  ],
  "ignoreOptions": undefined,
  "ignorePrefix": "-",
  "layoutTransition": {
    "mode": "out-in",
    "name": "layout",
  },
  "layouts": {},
  "loading": {
    "color": "black",
    "continuous": false,
    "css": true,
    "duration": 5000,
    "failedColor": "red",
    "height": "2px",
    "rtl": false,
    "throttle": 200,
  },
  "loadingIndicator": "default",
  "messages": {
    "back_to_home": "Back to the home page",
    "client_error": "Error",
    "client_error_details": "An error occurred while rendering the page. Check developer tools console for details.",
    "error_404": "This page could not be found",
    "loading": "Loading...",
    "nuxtjs": "Nuxt",
    "server_error": "Server error",
    "server_error_details": "An error occurred in the application and your page could not be served. If you are the application owner, check your logs for details.",
  },
  "mode": undefined,
  "modern": undefined,
  "modes": {
    "spa": {
      "build": {
        "ssr": false,
      },
      "render": {
        "ssr": false,
      },
    },
    "universal": {
      "build": {
        "ssr": true,
      },
      "render": {
        "ssr": true,
      },
    },
  },
  "modules": [],
  "modulesDir": [
    "node_modules",
  ],
  "pageTransition": {
    "appear": false,
    "appearActiveClass": "appear-active",
    "appearClass": "appear",
    "appearToClass": "appear-to",
    "mode": "out-in",
    "name": "page",
  },
  "plugins": [],
  "privateRuntimeConfig": {},
  "publicRuntimeConfig": {},
  "render": {
    "bundleRenderer": {
      "runInNewContext": undefined,
      "shouldPrefetch": [Function],
      "shouldPreload": [Function],
    },
    "compressor": {
      "threshold": 0,
    },
    "crossorigin": undefined,
    "csp": false,
    "dist": {
      "index": false,
      "maxAge": "1y",
    },
    "etag": {
      "weak": false,
    },
    "fallback": {
      "dist": {},
      "static": {
        "handlers": {
          ".htm": false,
          ".html": false,
        },
        "skipUnknown": true,
      },
    },
    "http2": {
      "push": false,
      "pushAssets": null,
      "shouldPush": null,
    },
    "resourceHints": true,
    "ssr": undefined,
    "ssrLog": undefined,
    "static": {
      "prefix": true,
    },
  },
  "router": {
    "base": "/",
    "extendRoutes": null,
    "fallback": false,
    "linkActiveClass": "nuxt-link-active",
    "linkExactActiveClass": "nuxt-link-exact-active",
    "linkPrefetchedClass": false,
    "middleware": [],
    "mode": "history",
    "parseQuery": false,
    "prefetchLinks": true,
    "prefetchPayloads": true,
    "routeNameSplitter": "-",
    "routes": [],
    "scrollBehavior": null,
    "stringifyQuery": false,
    "trailingSlash": undefined,
  },
  "server": {
    "host": "localhost",
    "https": false,
    "port": "3001",
    "socket": "/var/run/nuxt.sock",
    "timing": false,
  },
  "serverMiddleware": [],
  "srcDir": undefined,
  "ssr": true,
  "styleExtensions": [
    "css",
    "pcss",
    "postcss",
    "styl",
    "stylus",
    "scss",
    "sass",
    "less",
  ],
  "target": "server",
  "test": true,
  "vue": {
    "config": {
      "performance": undefined,
      "silent": undefined,
    },
  },
  "vueMeta": null,
  "watch": [],
  "watchers": {
    "chokidar": {
      "ignoreInitial": true,
    },
    "rewatchOnRawEvents": undefined,
    "webpack": {
      "aggregateTimeout": 1000,
    },
  },
}
`;
